syntax = "proto3";

option csharp_namespace = "BookingCalculationsGrpcService";

package booking;

service BookingCalculations {
  rpc CalculateTotalCost (CostRequest) returns (CostReply);
  rpc GetBookingStats (StatsRequest) returns (StatsReply);
  rpc GetAllBookings (BookingListRequest) returns (BookingListReply);
  rpc PredictCancellation (PredictionRequest) returns (PredictionReply);
}

message CostRequest {
  int32 noOfWeekendNights = 1;
  int32 noOfWeekNights = 2;
  float avgPricePerRoom = 3;
  string mealPlan = 4;
  int32 noOfSpecialRequests = 5;
  bool requiredCarParking = 6;
}

message CostReply {
  float totalCost = 1;
  float accommodationCost = 2;
  float mealCost = 3;
  float extrasCost = 4;
  string breakdown = 5;
}

message StatsRequest {
  
}

message StatsReply {
  int32 totalBookings = 1;
  int32 notCanceledBookings = 2;
  int32 canceledBookings = 3;
  float cancellationRate = 4;
  float averagePrice = 5;
  int32 totalGuests = 6;
}

message BookingListRequest {
  bool includeCanceled = 1;
  int32 maxResults = 2;
}

message BookingListReply {
  repeated BookingSummary bookings = 1;
  int32 totalCount = 2;
}

message BookingSummary {
  int32 bookingId = 1;
  int32 noOfAdults = 2;
  int32 noOfChildren = 3;
  int32 noOfWeekendNights = 4;
  int32 noOfWeekNights = 5;
  string mealPlan = 6;
  float avgPricePerRoom = 7;
  string bookingStatus = 8;
}

message PredictionRequest {
  int32 no_of_adults = 1;
  int32 no_of_children = 2;
  int32 no_of_weekend_nights = 3;
  int32 no_of_week_nights = 4;
  int32 type_of_meal_plan = 5;
  int32 required_car_parking_space = 6;
  int32 room_type_reserved = 7;
  int32 lead_time = 8;
  int32 arrival_month = 9;
  float avg_price_per_room = 10;
  int32 no_of_special_requests = 11;
  string market_segment_type = 12;
  int32 is_repeated_guest = 13;
  int32 no_previous_cancellations = 14;
  int32 no_previous_bookings_not_canceled = 15;
  string customer_email = 16;
}

message PredictionReply {
  string predicted_label = 1;
  float probability = 2;
  string risk_level = 3;
  string recommendation = 4;
  int32 history_record_id = 5;
  string customer_insight = 6;
}